# tez

./: CMakeLists.txt  Makefile  README.md  main.cpp
.github/workflows/: makefile.yml
include/: analyzer.hpp  hashTable.hpp  node.hpp  sentiment.hpp  trie.hpp
res/: negative.txt  neutral.txt
src/: analyzer.cpp  hashTable.cpp  hashTable.hpp  node.hpp  sentiment.cpp  tokenizer.cpp  tokenizer.hpp  trie.cpp
test/: lorem.txt  testAnalyzer.cpp  testHashTable.cpp  testTokenizer.cpp  testTrie.cpp
